rust_snuba/src/processors/snapshots/rust_snuba__processors__tests__schemas@ingest-replay-events-ReplaysProcessor-ingest-replay-events__1__click-serialized.json.snap
---
source: src/processors/mod.rs
description: "{\n  \"type\": \"replay_event\",\n  \"start_time\": 1702848658.558295,\n  \"replay_id\": \"834f314caae54030a1b0dc52b202f24a\",\n  \"project_id\": 1,\n  \"retention_days\": 90,\n  \"payload\": {\n    \"type\": \"replay_actions\",\n    \"replay_id\": \"834f314caae54030a1b0dc52b202f24a\",\n    \"clicks\": [\n      {\n        \"alt\": \"Submit Form\",\n        \"aria_label\": \"Form submission button\",\n        \"class\": [\"hello\", \"world\"],\n        \"component_name\": \"SignUpForm\",\n        \"event_hash\": \"43fa3efbd5954163af6c279f3f5088c9\",\n        \"id\": \"id\",\n        \"is_dead\": 1,\n        \"is_rage\": 0,\n        \"node_id\": 1,\n        \"role\": \"button\",\n        \"tag\": \"div\",\n        \"testid\": \"x-button-submit-form\",\n        \"text\": \"Submit\",\n        \"timestamp\": 1702848658.558295,\n        \"title\": \"Click to submit form\"\n      }\n    ]\n  }\n}\n"
expression: snapshot_payload
---
[
  {
    "browser_name": "",
    "browser_version": "",
    "click_alt": "Submit Form",
    "click_aria_label": "Form submission button",
    "click_class": [
      "hello",
      "world"
    ],
    "click_component_name": "SignUpForm",
    "click_id": "id",
    "click_is_dead": 1,
    "click_is_rage": 0,
    "click_node_id": 1,
    "click_role": "button",
    "click_tag": "div",
    "click_testid": "x-button-submit-form",
    "click_text": "Submit",
    "click_title": "Click to submit form",
    "debug_id": "00000000-0000-0000-0000-000000000000",
    "device_brand": "",
    "device_family": "",
    "device_model": "",
    "device_name": "",
    "dist": "",
    "environment": "",
    "error_id": "00000000-0000-0000-0000-000000000000",
    "error_ids": [],
    "error_sample_rate": -1.0,
    "event_hash": "<event UUID>",
    "fatal_id": "00000000-0000-0000-0000-000000000000",
    "info_id": "00000000-0000-0000-0000-000000000000",
    "ip_address_v4": null,
    "ip_address_v6": null,
    "is_archived": 0,
    "offset": 1,
    "os_name": "",
    "os_version": "",
    "ota_updates_channel": "",
    "ota_updates_runtime_version": "",
    "ota_updates_update_id": "",
    "partition": 0,
    "platform": "",
    "project_id": 1,
    "release": "",
    "replay_id": "834f314c-aae5-4030-a1b0-dc52b202f24a",
    "replay_start_timestamp": null,
    "replay_type": "",
    "retention_days": 90,
    "sdk_name": "",
    "sdk_version": "",
    "segment_id": null,
    "segment_names": [],
    "session_sample_rate": -1.0,
    "tags.key": [],
    "tags.value": [],
    "tap_message": "",
    "tap_view_class": "",
    "tap_view_id": "",
    "timestamp": 1702848658,
    "title": null,
    "trace_ids": [],
    "urls": [],
    "user": "",
    "user_email": "",
    "user_geo_city": "",
    "user_geo_country_code": "",
    "user_geo_region": "",
    "user_geo_subdivision": "",
    "user_id": "",
    "user_name": "",
    "viewed_by_id": 0,
    "warning_id": "00000000-0000-0000-0000-000000000000"
  }
]
