rust_snuba/src/processors/snapshots/rust_snuba__processors__tests__schemas@ingest-replay-events-ReplaysProcessor-ingest-replay-events__1__event-link.json.snap
---
source: src/processors/mod.rs
description: "{\n  \"type\": \"replay_event\",\n  \"start_time\": 1702848658.558295,\n  \"replay_id\": \"834f314caae54030a1b0dc52b202f24a\",\n  \"project_id\": 1,\n  \"retention_days\": 90,\n  \"payload\": [\n    123, 34, 116, 121, 112, 101, 34, 58, 32, 34, 101, 118, 101, 110, 116, 95,\n    108, 105, 110, 107, 34, 44, 32, 34, 114, 101, 112, 108, 97, 121, 95, 105,\n    100, 34, 58, 32, 34, 56, 51, 52, 102, 51, 49, 52, 99, 97, 97, 101, 53, 52,\n    48, 51, 48, 97, 49, 98, 48, 100, 99, 53, 50, 98, 50, 48, 50, 102, 50, 52,\n    97, 34, 44, 32, 34, 101, 118, 101, 110, 116, 95, 104, 97, 115, 104, 34, 58,\n    32, 34, 55, 55, 53, 99, 98, 99, 49, 57, 52, 48, 99, 53, 52, 57, 55, 50, 57,\n    49, 49, 49, 97, 99, 51, 54, 97, 98, 56, 99, 54, 99, 48, 52, 34, 44, 32, 34,\n    116, 105, 109, 101, 115, 116, 97, 109, 112, 34, 58, 32, 49, 55, 48, 50, 56,\n    52, 56, 54, 53, 56, 46, 53, 53, 56, 50, 57, 53, 44, 32, 34, 108, 101, 118,\n    101, 108, 34, 58, 32, 34, 102, 97, 116, 97, 108, 34, 44, 32, 34, 102, 97,\n    116, 97, 108, 95, 105, 100, 34, 58, 32, 34, 102, 57, 100, 50, 98, 53, 55,\n    53, 51, 48, 55, 50, 52, 50, 49, 53, 97, 57, 53, 53, 50, 57, 56, 52, 51, 99,\n    99, 54, 102, 57, 100, 48, 34, 125\n  ]\n}\n"
expression: snapshot_payload
---
[
  {
    "browser_name": "",
    "browser_version": "",
    "click_alt": "",
    "click_aria_label": "",
    "click_class": [],
    "click_component_name": "",
    "click_id": "",
    "click_is_dead": 0,
    "click_is_rage": 0,
    "click_node_id": 0,
    "click_role": "",
    "click_tag": "",
    "click_testid": "",
    "click_text": "",
    "click_title": "",
    "debug_id": "00000000-0000-0000-0000-000000000000",
    "device_brand": "",
    "device_family": "",
    "device_model": "",
    "device_name": "",
    "dist": "",
    "environment": "",
    "error_id": "00000000-0000-0000-0000-000000000000",
    "error_ids": [],
    "error_sample_rate": -1.0,
    "event_hash": "<event UUID>",
    "fatal_id": "f9d2b575-3072-4215-a955-29843cc6f9d0",
    "info_id": "00000000-0000-0000-0000-000000000000",
    "ip_address_v4": null,
    "ip_address_v6": null,
    "is_archived": 0,
    "offset": 1,
    "os_name": "",
    "os_version": "",
    "ota_updates_channel": "",
    "ota_updates_runtime_version": "",
    "ota_updates_update_id": "",
    "partition": 0,
    "platform": "",
    "project_id": 1,
    "release": "",
    "replay_id": "834f314c-aae5-4030-a1b0-dc52b202f24a",
    "replay_start_timestamp": null,
    "replay_type": "",
    "retention_days": 90,
    "sdk_name": "",
    "sdk_version": "",
    "segment_id": null,
    "segment_names": [],
    "session_sample_rate": -1.0,
    "tags.key": [],
    "tags.value": [],
    "tap_message": "",
    "tap_view_class": "",
    "tap_view_id": "",
    "timestamp": 1702848658,
    "title": null,
    "trace_ids": [],
    "urls": [],
    "user": "",
    "user_email": "",
    "user_geo_city": "",
    "user_geo_country_code": "",
    "user_geo_region": "",
    "user_geo_subdivision": "",
    "user_id": "",
    "user_name": "",
    "viewed_by_id": 0,
    "warning_id": "00000000-0000-0000-0000-000000000000"
  }
]
