rust_snuba/src/processors/snapshots/rust_snuba__processors__tests__schemas@ingest-replay-events-ReplaysProcessor-ingest-replay-events__1__viewed.json.snap
---
source: src/processors/mod.rs
description: "{\n  \"type\": \"replay_event\",\n  \"start_time\": 1712009295.0,\n  \"replay_id\": \"834f314caae54030a1b0dc52b202f24a\",\n  \"project_id\": 1,\n  \"retention_days\": 90,\n  \"payload\": [\n    123, 10, 32, 32, 32, 32, 34, 116, 121, 112, 101, 34, 58, 32, 34, 114, 101,\n    112, 108, 97, 121, 95, 118, 105, 101, 119, 101, 100, 34, 44, 10, 32, 32, 32,\n    32, 34, 118, 105, 101, 119, 101, 100, 95, 98, 121, 95, 105, 100, 34, 58, 32,\n    50, 51, 56, 50, 51, 54, 50, 51, 50, 52, 50, 44, 10, 32, 32, 32, 32, 34, 116,\n    105, 109, 101, 115, 116, 97, 109, 112, 34, 58, 32, 49, 55, 49, 50, 48, 48,\n    57, 50, 57, 53, 10, 125\n  ]\n}\n"
expression: snapshot_payload
---
[
  {
    "browser_name": "",
    "browser_version": "",
    "click_alt": "",
    "click_aria_label": "",
    "click_class": [],
    "click_component_name": "",
    "click_id": "",
    "click_is_dead": 0,
    "click_is_rage": 0,
    "click_node_id": 0,
    "click_role": "",
    "click_tag": "",
    "click_testid": "",
    "click_text": "",
    "click_title": "",
    "debug_id": "00000000-0000-0000-0000-000000000000",
    "device_brand": "",
    "device_family": "",
    "device_model": "",
    "device_name": "",
    "dist": "",
    "environment": "",
    "error_id": "00000000-0000-0000-0000-000000000000",
    "error_ids": [],
    "error_sample_rate": -1.0,
    "event_hash": "<event UUID>",
    "fatal_id": "00000000-0000-0000-0000-000000000000",
    "info_id": "00000000-0000-0000-0000-000000000000",
    "ip_address_v4": null,
    "ip_address_v6": null,
    "is_archived": 0,
    "offset": 1,
    "os_name": "",
    "os_version": "",
    "ota_updates_channel": "",
    "ota_updates_runtime_version": "",
    "ota_updates_update_id": "",
    "partition": 0,
    "platform": "",
    "project_id": 1,
    "release": "",
    "replay_id": "834f314c-aae5-4030-a1b0-dc52b202f24a",
    "replay_start_timestamp": null,
    "replay_type": "",
    "retention_days": 90,
    "sdk_name": "",
    "sdk_version": "",
    "segment_id": null,
    "segment_names": [],
    "session_sample_rate": -1.0,
    "tags.key": [],
    "tags.value": [],
    "tap_message": "",
    "tap_view_class": "",
    "tap_view_id": "",
    "timestamp": 1712009295,
    "title": null,
    "trace_ids": [],
    "urls": [],
    "user": "",
    "user_email": "",
    "user_geo_city": "",
    "user_geo_country_code": "",
    "user_geo_region": "",
    "user_geo_subdivision": "",
    "user_id": "",
    "user_name": "",
    "viewed_by_id": 23823623242,
    "warning_id": "00000000-0000-0000-0000-000000000000"
  }
]
